# ifitwala_drive

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
ifitwala_drive/: hooks.py  modules.txt  patches.txt  request_hooks.py  tasks.py
ifitwala_drive/api/: _payloads.py  access.py  admissions.py  communications.py  erasure.py  files.py  folders.py  materials.py  media.py  resources.py  student_logs.py  submissions.py  uploads.py
ifitwala_drive/desktop_icon/: drive.json  ifitwala_drive.json
ifitwala_drive/docs/: 00_discussions.md  01_product_north_star.md  01_product_principles.md  02_drive_authority_decision.md  02_system_architecture.md  03_security_concurrency.md  03_system_architecture.md  04_coupling_with_ifiwala_ed.md  04_security_runtime.md  05_ifitwala_ed_boundary.md  05_optionC_design_lock.md  06_api_contracts.md  07_drive_upload_session.md  07_storage_adapter_contract.md  08_cross_portal_preview_contract.md  08_ed_integration_implementation_plan.md  09_phase1_contract_matrix.md  09_semantic_browse_plan.md  10_phase2_context_anchored_product_note.md  10_storage_settings_gcs_offload.md  11_storage_navigation_repair_proposal.md  12_context_browse_placement_matrix.md  12_gcs_ops_runbook.md  13_audit_and_next_steps.md  13_first_slice_implementation_checklist.md  14_drive_north_star_v1.md  15_lean_bridge_and_drive_view_proposal.md  16_object_storage_adapter_contract.md  17_ed_drive_press_execution_plan.md  18_gcs_bucket_settings_and_site_offload_proposal.md  19_public_file_cutover_contract.md  20_gcs_ops_runbook.md  21_cross_portal_governed_attachment_preview_contract.md  README.md  audit.md
ifitwala_drive/patches/: cleanup_legacy_drive_desk_records.py  migrate_legacy_upload_session_secondary_subjects.py  normalize_ifitwala_drive_desktop_icon.py  repair_drive_doctype_modules.py  retire_legacy_lesson_binding_roles.py
ifitwala_drive/public/: node_modules
ifitwala_drive/services/: concurrency.py  governance_contract.py  logging.py  queueing.py
ifitwala_drive/tests/: test_access_grants.py  test_api_wrapper_contracts.py  test_desk_fixtures.py  (+30 more)
scripts/: run_local_checks.sh
(+83 files in other folders)
